Adding group by key step before Spanner write step